Added Basic Miner, Mining Pipe, Mining Heads, and a few crafting materials. Upgraded some APIs with EnergyManager & TileSidedConfigImpl
Signed-off-by: Zeith <me@zeith.org>